// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<span
  class="zs-checkbox zs-checkbox--checked"
>
  <span
    class="zs-checkbox__widget"
  >
    <span
      class="zs-checkbox__inner"
    />
  </span>
  <span
    class="zs-checkbox__text"
  >
    foo
  </span>
  <input
    checked=""
    class="zs-checkbox__input"
    type="checkbox"
  />
</span>
`;

exports[`Checkbox disabled 1`] = `
<span
  class="zs-checkbox zs-checkbox--disabled"
>
  <span
    class="zs-checkbox__widget"
  >
    <span
      class="zs-checkbox__inner"
    />
  </span>
  <span
    class="zs-checkbox__text"
  >
    foo
  </span>
  <input
    class="zs-checkbox__input"
    disabled=""
    type="checkbox"
  />
</span>
`;

exports[`Checkbox renders correctly 1`] = `
<span
  class="zs-checkbox zs-checkbox--checked"
>
  <span
    class="zs-checkbox__widget"
  >
    <span
      class="zs-checkbox__inner"
    />
  </span>
  <span
    class="zs-checkbox__text"
  >
    foo
  </span>
  <input
    checked=""
    class="zs-checkbox__input"
    type="checkbox"
  />
</span>
`;

exports[`Checkbox.Group render defaultValue correctly 1`] = `
<div
  class="zs-checkbox-group zs-checkbox-group--xs zs-checkbox-group--radius"
>
  <div
    class="zs-checkbox-group__inner"
  >
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项一
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="zs-checkbox zs-checkbox--checked"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="zs-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项三
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div
  class="zs-checkbox-group zs-checkbox-group--xs zs-checkbox-group--radius"
>
  <div
    class="zs-checkbox-group__inner"
  >
    <span
      class="zs-checkbox zs-checkbox--checked"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项一
      </span>
      <input
        checked=""
        class="zs-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项二
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项三
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="zs-checkbox-group zs-checkbox-group--xs zs-checkbox-group--radius"
>
  <div
    class="zs-checkbox-group__inner"
  >
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项一
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="0"
      />
    </span>
    <span
      class="zs-checkbox zs-checkbox--checked"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项二
      </span>
      <input
        checked=""
        class="zs-checkbox__input"
        type="checkbox"
        value="1"
      />
    </span>
    <span
      class="zs-checkbox"
    >
      <span
        class="zs-checkbox__widget"
      >
        <span
          class="zs-checkbox__inner"
        />
      </span>
      <span
        class="zs-checkbox__text"
      >
        选项三
      </span>
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="2"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="zs-checkbox-group zs-checkbox-group--button zs-checkbox-group--xs zs-checkbox-group--radius"
>
  <div
    class="zs-checkbox-group__inner"
  >
    <button
      class="zs-checkbox"
      type="button"
    >
      选项一
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="0"
      />
    </button>
    <button
      class="zs-checkbox"
      type="button"
    >
      选项二
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="1"
      />
    </button>
    <button
      class="zs-checkbox"
      type="button"
    >
      选项三
      <input
        class="zs-checkbox__input"
        type="checkbox"
        value="2"
      />
    </button>
  </div>
</div>
`;

exports[`Checkbox.Group type is cell 1`] = `
<div
  class="zs-checkbox-group zs-checkbox-group--cell zs-checkbox-group--xs zs-checkbox-group--radius"
>
  <div
    class="zs-checkbox-group__inner"
  >
    <div
      class="zs-cell zs-cell--link"
    >
      <div
        class="zs-cell__inner"
      >
        <div
          class="zs-cell__header"
        />
        <div
          class="zs-cell__body"
        >
          <div
            class="zs-cell__content"
          >
            <span
              class="zs-checkbox"
            >
              <span
                class="zs-checkbox__widget"
              >
                <span
                  class="zs-checkbox__inner"
                />
              </span>
              <span
                class="zs-checkbox__text"
              >
                选项一
              </span>
              <input
                class="zs-checkbox__input"
                type="checkbox"
                value="0"
              />
            </span>
          </div>
        </div>
        <div
          class="zs-cell__footer"
        />
      </div>
    </div>
    <div
      class="zs-cell zs-cell--link"
    >
      <div
        class="zs-cell__inner"
      >
        <div
          class="zs-cell__header"
        />
        <div
          class="zs-cell__body"
        >
          <div
            class="zs-cell__content"
          >
            <span
              class="zs-checkbox"
            >
              <span
                class="zs-checkbox__widget"
              >
                <span
                  class="zs-checkbox__inner"
                />
              </span>
              <span
                class="zs-checkbox__text"
              >
                选项二
              </span>
              <input
                class="zs-checkbox__input"
                type="checkbox"
                value="1"
              />
            </span>
          </div>
        </div>
        <div
          class="zs-cell__footer"
        />
      </div>
    </div>
    <div
      class="zs-cell zs-cell--link"
    >
      <div
        class="zs-cell__inner"
      >
        <div
          class="zs-cell__header"
        />
        <div
          class="zs-cell__body"
        >
          <div
            class="zs-cell__content"
          >
            <span
              class="zs-checkbox"
            >
              <span
                class="zs-checkbox__widget"
              >
                <span
                  class="zs-checkbox__inner"
                />
              </span>
              <span
                class="zs-checkbox__text"
              >
                选项三
              </span>
              <input
                class="zs-checkbox__input"
                type="checkbox"
                value="2"
              />
            </span>
          </div>
        </div>
        <div
          class="zs-cell__footer"
        />
      </div>
    </div>
  </div>
</div>
`;
